# GEAK-agent

./: .gitignore  .gitmodules  Dockerfile  KERNEL_TEMPLATE.md  Makefile  README.md  README_ori.md  RUN_SCRIPT_TEMPLATE.sh  mini-kernel  openevolve-run.py  pyproject.toml  requirements.py  requirements.txt  run_agent.py  setup.py  setup.sh  test_evaluator.py  test_llm_optimization.py  torch_grouped_gemm_reference.py
automated-test-discovery/: README.md  pyproject.toml
automated-test-discovery/src/automated_test_discovery/: __init__.py  cli.py  server.py
configs/: default_config.yaml  island_config_example.yaml  island_examples.yaml
docs/: DIAGRAM_README.md  DISCOVERY_PIPELINE.md  GETTING_STARTED.md
example_hip/: FromRe_instructions.json  FromRe_instructions_FULL.json  README.md  extract_single.py  test_compile_all.sh  verify_no_comments.sh
example_hip/attention_naive/: Makefile  attention_naive.hip  test_attention
example_hip/conv_naive/: Makefile  conv_naive.hip  test_conv
example_hip/gemm_naive/: Makefile  gemm_naive.hip  test_gemm
example_hip/layernorm_naive/: Makefile  layernorm_naive.hip  test_layernorm
example_hip/mmcv/assign_score_withk/: kernel_loader.py  test_assign_score_withk.py
example_hip/mmcv/ball_query/: kernel_loader.py  test_ball_query.py
example_hip/mmcv/furthest_point_sample/: kernel_loader.py  test_furthest_point_sample.py
example_hip/mmcv/gather_points/: kernel_loader.py  test_gather_points.py
example_hip/point_to_voxel/: build.sh  main.hip  main_eng_opt.hip  point_to_voxelidx_hip.hip
example_hip/reduction_naive/: Makefile  reduction_naive.hip  test_reduction
example_hip/rocm-examples/: .markdownlint.yaml  ROCm-Examples-VS2017.sln  ROCm-Examples-VS2019.sln  ROCm-Examples-VS2022.sln
example_hip/silu/: Makefile  silu.hip  test_silu
example_hip/softmax_naive/: Makefile  softmax_naive.hip  test_softmax
example_hip/transpose_naive/: Makefile  test_transpose  transpose_naive.hip
examples/add_kernel/: kernel.py
examples/tb/: .gitignore  baseline_test_config.yaml  baseline_test_config_quick.yaml  env_template.sh  evaluator.py  my_env.sh  parse_showlog.py  prepare_rocm_initial_programs.py  rocm_evaluator.py  rocm_test_fns.txt  run.py  tb_evaluator.py  test.py  test_simple_gemm.py  triton_evaluator.py
geak_agent/: __init__.py  cli.py  discovery.py
kernel-ercs/: README.md  pyproject.toml  test_mcp.py
kernel-ercs/src/kernel_ercs/: __init__.py  cli.py  server.py
kernel-evolve/: README.md  pyproject.toml
kernel-evolve/src/kernel_evolve/: __init__.py  cli.py  server.py
kernel-profiler/: README.md  pyproject.toml
kernel-profiler/src/kernel_profiler/: __init__.py  cli.py  server.py
mini_kernel/: __init__.py  agent.py  autonomous_optimizer.py  checkpoint.py  cli.py  evolutionary_optimizer.py  generic_runner.py  intervention.py  kernel_code_generator.py  llm_brain.py  openevolve_brain.py  optimization_strategies.py  profiler.py  report_generator.py  runner.py  state.py  test_harness_generator.py
mini_kernel/mcp_tools/: __init__.py  bench.py  profiler.py  verify.py
openevolve/: __init__.py  cli.py  config.py  controller.py  database.py  evaluation_result.py  evaluator.py
openevolve/llm/: __init__.py  base.py  ensemble.py  openai.py  sampling.py
openevolve/prompt/: __init__.py  sampler.py  templates.py
openevolve/utils/: __init__.py  async_utils.py  code_utils.py  format_utils.py  metrics_utils.py  other_utils.py
profiler/: OPTIMIZATION_REPORT.md  README.md  __init__.py  aggressive_optimization.py  bottleneck_analyzer.py  comprehensive_topk_sort_profile.py  final_optimization.py  final_push.py  generic_profiler.py  openevolve_integration.py  optimize_topk_sort.py  optimize_topk_sort_v2.py  profile_and_analyze_topk_sort.py  profile_topk_sort_full.py  rocm_profiler.py  roofline.py  run_topk_sort_analysis.py  test_profiler.py  verify_baseline.py
scripts/: generate_kernel_setup.py  install_profiler.sh  install_rocprof_compute.sh  visualizer.py
src/: main_gaagent.py  main_gaagent_hip.py  main_gaagent_hip_public.py  main_gaagent_rocm.py  main_optimagent_hip.py  main_reflexion_oneshot.py  run_gaagent_hip.sh  run_gaagent_hip_benchmark.sh  verify_env_config.py
src/agents/: GaAgent.py  GaAgent_HIP.py  GaAgent_ROCm.py  OptimAgent.py  OptimAgent_HIP.py  reflexion_oneshot_hip.py
src/configs/: extract_kernel_config.yaml  hipbench_gaagent_config.yaml  hipbench_optimagent_config.yaml  rocm_gaagent_config_new.yaml  tritonbench_gaagent_config.yaml  tritonbench_oneshot_config.yaml  tritonbench_optimagent_config.yaml
src/dataloaders/: HIPBench.py  ProblemState.py  ROCm.py  TritonBench.py
src/geakagent/: __init__.py  __main__.py
src/models/: Claude.py  Gemini.py  OpenAI.py  PublicLLM.py
src/prompts/: prompt_for_generation.py  prompt_for_reflection.py  prompt_for_reflection_hip.py
src/retrievers/: retriever.py
src/utils/: utils.py
tests/: test_artifacts.py  test_artifacts_integration.py  test_checkpoint_resume.py  test_code_utils.py  test_database.py  test_evaluator_timeout.py  test_llm_ensemble.py  test_prompt_sampler.py  test_valid_configs.py
tutorial/: GEAK_agent_tutorial.ipynb  GEAK_agent_tutorial.py  GEAK_agent_tutorial_BAK.ipynb  GEAK_agent_tutorial_clean.py  README.md  RUN_OPENEVOLVE_STANDALONE.ipynb  RUN_OPENEVOLVE_STANDALONE_kernel1.ipynb  RUN_OPENEVOLVE_STANDALONE_kernel2.ipynb  fp8_kernel_gen.ipynb  torch_grouped_gemm_reference.py  torch_grouped_gemm_reference_BAK.py  tutorial_config.yaml
tutorial/data/: instructions.json
tutorial/outputs/: tutorial_results_0.jsonl  tutorial_results_1.jsonl  tutorial_results_2.jsonl  tutorial_results_3.jsonl  tutorial_results_4.jsonl  tutorial_results_5.jsonl  tutorial_results_6.jsonl  tutorial_results_7.jsonl  tutorial_results_mem_0.json  tutorial_results_mem_1.json  tutorial_results_mem_2.json  tutorial_results_mem_3.json  tutorial_results_mem_4.json  tutorial_results_mem_5.json  tutorial_results_mem_6.json  tutorial_results_mem_7.json
tutorial/prompts_tutorial/: evaluator_system_message.txt  system_message.txt
tutorial/tutorial_utils/: __init__.py  display.py
(+298 files in other folders)
