[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geak-agent"
version = "0.1.0"
description = "GPU Evolutionary Agent for Kernels - A simple AI agent for GPU kernel optimization"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["gpu", "kernel", "optimization", "triton", "hip", "cuda", "agents"]

dependencies = [
    "pyyaml",
    "requests",
    "jinja2",
    "litellm >= 1.75.5",
    "tenacity",
    "rich",
    "python-dotenv",
    "typer",
    "platformdirs",
    "textual",
    "prompt_toolkit",
    "openai",
    "anthropic",
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
Repository = "https://github.com/AMD-AGI/GEAK-agent"

[project.scripts]
geak = "geakagent.run.mini:app"
geak-agent = "geakagent.run.mini:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["geakagent*"]

[tool.setuptools.package-data]
geakagent = ["config/**/*"]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "reference",
]
line-length = 120
indent-width = 4
target-version = "py310"
