[project]
name = "automated-test-discovery"
version = "0.1.0"
description = "MCP server for automated test and benchmark discovery for GPU kernels"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "gpu", "kernel", "test", "discovery", "triton", "hip", "cuda"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "anthropic>=0.40.0",
]

[project.scripts]
automated-test-discovery-mcp = "automated_test_discovery.server:main"
test-discovery = "automated_test_discovery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automated_test_discovery"]
