[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernel-evolve"
version = "0.1.0"
description = "MCP server for evolutionary GPU kernel optimization (OpenEvolve brain)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "AMD GEAK Team"}
]
keywords = ["mcp", "triton", "gpu", "kernel", "amd", "rocm", "evolutionary", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "anthropic>=0.30.0",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
kernel-evolve-mcp = "kernel_evolve.server:main"
kernel-evolve = "kernel_evolve.cli:main"

[project.urls]
Repository = "https://github.com/amd/GEAK-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/kernel_evolve"]
