[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernel-profiler"
version = "0.1.0"
description = "MCP server for hardware-level GPU kernel profiling with rocprof-compute"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "AMD GEAK Team"}
]
keywords = ["mcp", "triton", "gpu", "kernel", "amd", "rocm", "profiler", "rocprof"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
kernel-profiler = "kernel_profiler.server:main"

[project.urls]
Repository = "https://github.com/amd/GEAK-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/kernel_profiler"]
